=================
Changes for crash
=================

Unreleased
==========

 - Check if certificate related files exist and have read permissions before
   entering Crash prompt.

2017/06/27 0.21.0
=================

 - Print only error message instead of full stacktrack in case of connection
   error.

 - Added support for SSL connection to CrateDB.

 - Added new parameter ``username`` used to authenticate the user in CrateDB.

 - Improved queries for ``sysinfo`` command

 - Expanded the list of keywords used by autocompletion and
   autocapitlization.

 - Automatically capitalize keywords while typing, e.g. ``select`` -> ``SELECT``
   **This feature is experimental and turned off by default. It may be removed
   in future versions!**

 - Automatically suggest and complete to ``UPPERCASE`` keywords
   when using autocomplete.

 - Added support for opening an editor to edit the current command.
   This behaves similar as the same functionality in bash or zsh.

 - Added support for suspend (``Ctrl-z``)

2017/06/27 0.20.1
=================

 - Fix: Single word statements (such as ``BEGIN;``) that return ``OK`` crashed
   the application.

 - Fixed issue that caused the `--sysinfo` command to fail after a connection.

2016/12/02 0.20.0
=================

 - Updated information_schema metadata queries to reflect the current state of
   CrateDB.

2016/11/18 0.19.1
=================

 - ``--sysinfo`` does not fail any more when the name of the connected CrateDB
   node contains a unicode character.

 - Crash was trying to connect to invalid hosts if no hosts were provided via
  ``--hosts`` argument and configuration file was already present.

2016/10/27 0.19.0
=================

 - Allow "short hosts" as Crate hosts argument,
   such as ``:4200`` for ``localhost:4200``

2016/10/12 0.18.1
=================

 - Fix: crashed in verbose mode if crate didn't provide an error trace

2016/09/23 0.18.0
=================
